<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Utils Example</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_arraylist_to_string">ArraylistToString</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_blur_effect">BlurEffectActivity</string>
    <string name="title_activity_drawable_to_bitmap">DrawableToBitmapActivity</string>
    <string name="title_activity_save_image_in_preference">SaveImageInPreference</string>
    <string name="title_activity_vertical_text_views">VerticalTextViewsActivity</string>
    <string name="title_activity_rounded_bitmap">RoundedBitmapActivity</string>
    <string name="title_activity_prevent_click">PreventClickActivity</string>
    <string name="title_activity_pick_capture">PickCaptureActivity</string>
    <string name="title_activity_email_contacts_screen_shot">EmailContactsScreenShotActivity</string>
    <string name="title_activity_image_video">ImageVideoActivity</string>
    <string name="title_activity_address_on_map">AddressOnMapActivity</string>
    <string name="title_activity_create_folder">CreateFolderActivity</string>
    <string name="title_activity_date_difference">DateDifferenceActivity</string>
    <string name="title_activity_string_to_date">StringToDateActivity</string>
    <string name="title_activity_toast">ToastActivity</string>
    <string name="title_activity_choose_profile">ChooseProfileActivity</string>
    <string name="title_activity_volume">VolumeActivity</string>
    <string name="title_activity_file_count">FileCountActivity</string>
    <string name="title_activity_color_picker">ColorPickerActivity</string>
    <string name="title_activity_download">DownloadActivity</string>
    <string name="rationale_storage">This app requires permission.</string>
    <string name="rationale_location">This app requires permission.</string>
    <string name="rationale_never_ask_storage">Looks like permission for storage has been permanently disabled. Go to Settings and turn it On.</string>
    <string name="rationale_never_ask_location">Looks like permission for location has been permanently disabled. Go to Settings and turn it On.</string>
    <string name="git_hub">GitHub</string>
    <string name="blog">Blog</string>
    <string name="demo_activity">ActivityUtils Demo</string>
    <string name="demo_app">AppUtils Demo</string>
    <string name="demo_clean">CleanUtils Demo</string>
    <string name="demo_crash">CrashUtils Demo</string>
    <string name="demo_device">DeviceUtils Demo</string>
    <string name="demo_fragment">FragmentUtils Demo</string>
    <string name="demo_flashlight">FlashlightUtils Demo</string>
    <string name="demo_handler">HandlerUtils Demo</string>
    <string name="demo_image">ImageUtils Demo</string>
    <string name="demo_keyboard">KeyboardUtils Demo</string>
    <string name="demo_location">LocationUtils Demo</string>
    <string name="demo_log">Log Demo</string>
    <string name="demo_network">NetworkUtils Demo</string>
    <string name="demo_permission">PermissionUtils Demo</string>
    <string name="demo_phone">PhoneUtils Demo</string>
    <string name="demo_pinyin">PinyinUtils Demo</string>
    <string name="demo_process">ProcessUtils Demo</string>
    <string name="demo_sdcard">SDCardUtils Demo</string>
    <string name="demo_snackbar">SnackbarUtils Demo</string>
    <string name="demo_spannable">SpannableStringUtils Demo</string>
    <string name="demo_toast">ToastUtils Demo</string>
    <string name="activity_start_imageActivity">Start ImageActivity</string>
    <string name="app_install">Install Test App</string>
    <string name="app_install_tips">Test app have installed</string>
    <string name="app_install_silent">Install Test App Silently</string>
    <string name="install_successfully">Install successfully</string>
    <string name="install_unsuccessfully">Install unsuccessfully</string>
    <string name="app_uninstall">Uninstall Test App</string>
    <string name="app_uninstall_tips">Please install test app first</string>
    <string name="app_uninstall_silent">Uninstall App Silently</string>
    <string name="uninstall_successfully">Uninstall successfully</string>
    <string name="uninstall_unsuccessfully">Uninstall unsuccessfully</string>
    <string name="app_launch">Launch App</string>
    <string name="app_close">Close App</string>
    <string name="app_isDebug">Is Debug</string>
    <string name="app_get_details_settings">Get App Details Settings</string>
    <string name="device_shutdown">Shutdown</string>
    <string name="device_reboot">Reboot</string>
    <string name="device_reboot_to_recovery">Reboot To Recovery</string>
    <string name="device_reboot_to_bootloader">Reboot To Bootloader</string>
    <string name="flashlight_open">Open Flashlight</string>
    <string name="flashlight_close">Close Flashlight</string>
    <string name="fragment_show_stack">Show Stack</string>
    <string name="fragment_add_demo1_hide">Add Demo1 Hide</string>
    <string name="fragment_add_demo1_show">Add Demo1 Show</string>
    <string name="fragment_add_child">Add Child</string>
    <string name="fragment_pop">Pop</string>
    <string name="fragment_pop_to_root">Pop To Root</string>
    <string name="fragment_pop_add">Pop Add</string>
    <string name="fragment_hide_demo0_show_demo1">Hide Demo0 Show Demo1</string>
    <string name="fragment_hide_demo1_show_demo0">Hide Demo1 Show Demo0</string>
    <string name="fragment_replace">Replace</string>
    <string name="fragment_transition">Transition</string>
    <string name="handler_send_msg_after_3s">Send Msg After 3s</string>
    <string name="handler_received_msg">Received Message</string>
    <string name="network_open_wireless_settings">Open Wireless Settings</string>
    <string name="network_set_data_enabled">Set Data Enabled</string>
    <string name="network_set_wifi_enabled">Set Wifi Enabled</string>
    <string name="keyboard_hide_soft_input">Hide Soft Input</string>
    <string name="keyboard_show_soft_input">Show Soft Input</string>
    <string name="keyboard_toggle_soft_input">Toggle Soft Input</string>
    <string name="log_toggle_tag">Toggle Tag</string>
    <string name="log_toggle_head">Toggle Head</string>
    <string name="log_toggle_border">Toggle Border</string>
    <string name="log_toggle_filter">Toggle Filter</string>
    <string name="log_toggle_file">Toggle File</string>
    <string name="log_toggle_dir">Toggle Dir</string>
    <string name="log_with_no_tag">Log With No Tag</string>
    <string name="log_with_tag">Log With Tag</string>
    <string name="log_in_new_thread">Log In New Thread</string>
    <string name="log_null">Log Null</string>
    <string name="log_many_params">Log Many Params</string>
    <string name="log_long_string">Log Long String</string>
    <string name="log_to_file">Log To File</string>
    <string name="log_json">Log Json</string>
    <string name="log_xml">Log Xml</string>
    <string name="phone_dial">Dial</string>
    <string name="phone_call">Call</string>
    <string name="phone_send_sms">Send SMS</string>
    <string name="phone_send_sms_silent">Send SMS Silent</string>
    <string name="process_kill_background">Kill Background Process</string>
    <string name="process_kill_all_background">Kill All Background Processes</string>
    <string name="snackbar_show_short">Show Short Snackbar</string>
    <string name="snackbar_show_short_with_action">Show Short Snackbar With Action</string>
    <string name="snackbar_show_long">Show Long Snackbar</string>
    <string name="snackbar_show_long_with_action">Show Long Snackbar With Action</string>
    <string name="snackbar_show_indefinite">Show Indefinite Snackbar</string>
    <string name="snackbar_show_indefinite_with_action">Show Indefinite Snackbar With Action</string>
    <string name="snackbar_add_view">Add View</string>
    <string name="snackbar_add_view_with_action">Add View With Action</string>
    <string name="snackbar_cancel">Cancel Snackbar</string>
    <string name="snackbar_short">Short Snackbar</string>
    <string name="snackbar_long">Long Snackbar</string>
    <string name="snackbar_indefinite">Indefinite Snackbar</string>
    <string name="snackbar_custom">Custom Snackbar</string>
    <string name="snackbar_click">Click</string>
    <string name="toast_toggle_location">Toggle Location</string>
    <string name="toast_toggle_view">Toggle View</string>
    <string name="toast_show_short_safe">Show Short Toast Safe</string>
    <string name="toast_show_long_safe">Show Long Toast Safe</string>
    <string name="toast_show_short">Show Short Toast</string>
    <string name="toast_show_long">Show Long Toast</string>
    <string name="toast_cancel">Cancel Toast</string>
    <string name="toast_custom_view">Custom View</string>
    <string name="toast_short_safe">Short Safe</string>
    <string name="toast_long_safe">Long Safe</string>
    <string name="toast_short">Short</string>
    <string name="toast_long">Long</string>
    <string name="pls_wait">Please wait…</string>
    <string name="error_name_msg_blank">Please enter your name</string>
    <string name="error_email_msg_blank">Please enter an email id</string>
    <string name="error_password_msg_blank">Please enter a password</string>
    <string name="error_email_msg">Please enter a valid email id</string>
    <string name="error_password_msg">Please enter valid password</string>
    <string name="error_username_msg_blank">Please enter your username</string>
    <string name="error_address_msg_blank">Please enter your address</string>
    <string name="error_zip_msg_blank">Please enter your zip/post code</string>
    <string name="error_phone_blank">Please enter your phone number</string>
    <string name="error_password_msg_min_max">Password must be of minimum 8 characters</string>
    <string name="error_name_msg_min_max">Name must have more than 2 and less than 50 characters</string>
    <string name="error_confirm_password_not_match">Confirm password and password do not match</string>
    <string name="error_confirm_password_empty">Please enter a confirm password</string>
    <string name="error_network_connectivity">Make sure your device is connected to the internet</string>
    <string name="error_something_went_wrong">Oops! Something went wrong</string>
    <string name="error_no_share_link">No share link available for this city</string>
    <string name="error_desc_empty">Please enter description</string>
    <string name="error_qty_empty">Please enter *</string>
    <string name="error_price_empty">Please enter unit price</string>
    <string name="error_total_price_empty">Please enter total price</string>
    <string name="error_grab_code">Please enter code</string>
    <string name="record_video">Record Video</string>
    <string name="capture_image">Capture Image</string>
    <string name="send_media">Send Media</string>
    <string name="select_media_via">Select Media Via</string>
    <string name="attach_via">Attach Via</string>
    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="str_chat_menu_camera">Camera</string>
    <string name="str_chat_menu_image">Image</string>
    <string name="str_chat_menu_video">Video</string>
    <string name="str_chat_menu_audio">Audio</string>
    <string name="str_chat_menu_current_location">Location</string>
    <string name="str_gallery">Gallery</string>
    <string name="bottom_sheet_select_image_using_gallery">Gallery</string>
    <string name="str_take_photos">Take Photo</string>
    <string name="str_take_video">Take Video</string>
    <string name="default_title_for_image_video_upload">Select an option to choose image/video</string>
    <string name="location">Location</string>
</resources>