<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.common.views.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_normal"
        android:text="@string/select_media_via"
        android:textSize="@dimen/text_size_regular"/>

    <LinearLayout
        android:id="@+id/btn_bottom_sheet_select_image_using_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/spacing_small"
        android:layout_marginTop="@dimen/normal_size"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/huge_size"
            android:layout_height="@dimen/huge_size"
            android:src="@drawable/ic_chat_bottom_gallery"/>

        <com.common.views.CustomTextView
            style="@style/StyleTvMediumFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_size"
            android:text="@string/bottom_sheet_select_image_using_gallery"
            android:textSize="@dimen/text_size_regular"
            android:textColor="@color/colorPrimaryText"
            android:textAllCaps="true"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_bottom_sheet_select_image_using_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:layout_marginBottom="@dimen/large_size"
        android:padding="@dimen/spacing_small"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/huge_size"
            android:layout_height="@dimen/huge_size"
            android:src="@drawable/ic_chat_bottom_camera"/>

        <com.common.views.CustomTextView
            style="@style/StyleTvMediumFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_size"
            android:text="@string/capture_image"
            android:textSize="@dimen/text_size_regular"
            android:textColor="@color/colorPrimaryText"
            android:textAllCaps="true"/>

    </LinearLayout>

</LinearLayout>